--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: CDF0EA;
 }
 
 .App-logo {
@@ -35,4 +36,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main-container {
+  position: absolute;
+  width: 704px;
+  height: 634px;
+  left: 538px;
+  top: 189px;
+
+  background: #F9F9F9;
+  border-radius: 30px;
 }
