--- a/front/src/minju/Todo.css
+++ b/front/src/minju/Todo.css
@@ -3,19 +3,50 @@
   width:100%;
   height:100%;
 }
-.Todo {
+.Todocontainer{
+  width: 704px;
+  height: 634px;
+  
+  background-color: #F9F9F9;
+  border-radius: 30px;
+  padding:43px;
+  
+}
+.Todobox {
   box-sizing: border-box;
-  max-width: 769px;
-  width:100;
-  margin: 0 auto;
+
+  width: 769px;
   height: 814px;
-  padding:15;
   
   border: 1px solid #EC1E1E;
+}
+.Headerbox {
+  box-sizing: border-box;
+  width: 738px;
+  height: 125px;
 
-  display:flex;
-  flex-direction:column;
-  background-color: #CDF0EA;
-  }
+  border: 1px solid #EC1E1E;
+}
+.Listbox {
+  box-sizing: border-box;
+  width: 608px;
+  height: 475px;
+
+  border: 1px solid #EC1E1E;
+}
+.Itembox {
+  box-sizing: border-box;
+  width: 608px;
+  height: 80px;
+
+  border: 1px solid #EC1E1E;
+}
+.Editbox {
+  box-sizing: border-box;
+  width: 269px;
+  height: 90px;
+
+  border: 1px solid #EC1E1E;
+}
 
   
