--- a/front/src/minju/Todo.css
+++ b/front/src/minju/Todo.css
@@ -38,13 +38,30 @@
   justify-content: center;
 }
 .Header {
-  font-size: 40px;
-  font-weight: bold;
+  font-size: 50px;
+  font-family:'PilseungGothic';
+  margin-right:61px;
+}
+.GoBoardbutton {
+  box-sizing: border-box;
+  width: 160px;
+  height: 70px;
+  background: #F6C6EA;
+  border: 2px solid #000000;
+  box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 30px;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+.GotoIcon{
+  width: 41px;
+  height: 48px;
 }
 .Listbox {
   box-sizing: border-box;
   width: 608px;
-  height: 475px;
+  height: 480px;
 
   border: 1px solid #EC1E1E;
   margin: 0 auto;
@@ -67,23 +84,30 @@
   background-color: #F9F9F9;
   border: 2px solid rgba(0, 0, 0, 0.5);
   border-radius: 30px;
+  display: flex;
+  align-items: center;
 }
 .Inputtext{
-  width: 482px;
-  height: 48px;
   font-size: 24px;
+  font-family: 'NeoDunggeunmoPro-Regular';
   font-weight: bold;
-  line-height: 29px;
   color: #000000;
-  opacity: 0.5;
+  opacity: 0.55;
 }
 .Checkbox{
   width: 52px;
   height: 51px;
-  margin-left: 10px;
+  margin-left: 7px;
   
   border-radius: 30px;
   border: 2px solid rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.CheckMark{
+  width: 51.25px;
+  height: 48.34px;
 }
 .Editbox {
   box-sizing: border-box;
@@ -104,5 +128,25 @@
   box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.75);
   border-radius: 30px;
   margin:6px;
+  display: flex;
+  justify-content: center;
 }
-  
+.Buttontext {
+  font-size: 24px;
+  font-family: 'NeoDunggeunmoPro-Regular';
+  font-weight: bold;
+  color: #000000;
+}
+
+@font-face {
+  font-family: 'NeoDunggeunmoPro-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/NeoDunggeunmoPro-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PilseungGothic';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/PilseungGothic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
