--- a/front/src/minju/Todo.css
+++ b/front/src/minju/Todo.css
@@ -38,24 +38,18 @@
   justify-content: center;
   position: relative;
 }
-.Headerbox2 {
-  box-sizing: border-box;
-  width: 500px;
-  height: 125px;
-  border: 1px solid #EC1E1E;
-  position: absolute;
-}
 .Header {
   font-size: 50px;
   font-family:'PilseungGothic';
   margin-right: 61px;
+  position: absolute;
 }
 .GoBoardbutton {
   box-sizing: border-box;
   width: 160px;
   height: 70px;
   background: #F6C6EA;
-  border: 2px solid #000000;
+  border: 3px solid #000000;
   box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.75);
   border-radius: 30px;
   margin-top: 40px;
@@ -69,13 +63,20 @@
   width: 41px;
   height: 48px;
 }
-.Listbox {
+.ListTemplatebox {
   box-sizing: border-box;
   width: 608px;
   height: 480px;
 
   border: 1px solid #EC1E1E;
   margin: 0 auto;
+}
+.Listbox {
+  box-sizing: border-box;
+  width: 608px;
+  height: 397px;
+  border: 1px solid #EC1E1E;
+  overflow-y: auto;
 }
 .Itembox {
   box-sizing: border-box;
@@ -93,7 +94,7 @@
   width: 602px;
   height: 68px;
   background-color: #F9F9F9;
-  border: 2px solid rgba(0, 0, 0, 0.5);
+  border: 3px solid rgba(0, 0, 0, 0.5);
   border-radius: 30px;
   display: flex;
   align-items: center;
@@ -120,12 +121,13 @@
   animation-fill-mode: forwards;
 }
 .Checkbox{
+  box-sizing: border-box;
   width: 52px;
   height: 51px;
-  margin-left: 7px;
-  
+  margin: 7px;
+
   border-radius: 30px;
-  border: 2px solid rgba(0, 0, 0, 0.7);
+  border: 3px solid rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -149,7 +151,7 @@
   width: 108px;
   height: 70px;
   background: #F6C6EA;
-  border: 2px solid #000000;
+  border: 3px solid #000000;
   box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.75);
   border-radius: 30px;
   margin:6px;
