--- a/front/src/minju/Todo.css
+++ b/front/src/minju/Todo.css
@@ -76,7 +76,23 @@
   width: 608px;
   height: 397px;
   border: 1px solid #EC1E1E;
+  overflow-x: hidden;
   overflow-y: auto;
+}
+/* 스크롤바 설정*/
+.Scrolltype::-webkit-scrollbar{
+  width: 8px;
+}
+/* 스크롤바 막대 설정*/
+.Scrolltype::-webkit-scrollbar-thumb{
+  height: 17%;
+  background-color: #7c7c7c;
+  /* 스크롤바 둥글게 설정 */
+  border-radius: 10px;    
+}
+/* 스크롤바 뒷 배경 설정*/
+.Scrolltype::-webkit-scrollbar-track{
+  background-color: rgba(0,0,0,0);
 }
 .Itembox {
   box-sizing: border-box;
@@ -94,7 +110,7 @@
   width: 602px;
   height: 68px;
   background-color: #F9F9F9;
-  border: 3px solid rgba(0, 0, 0, 0.5);
+  border: 2px solid rgba(0, 0, 0, 0.5);
   border-radius: 30px;
   display: flex;
   align-items: center;
@@ -125,9 +141,10 @@
   width: 52px;
   height: 51px;
   margin: 7px;
+  margin-right: 15px;
 
   border-radius: 30px;
-  border: 3px solid rgba(0, 0, 0, 0.7);
+  border: 2px solid rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
