--- a/front/src/dongseop/Write.css
+++ b/front/src/dongseop/Write.css
@@ -1,5 +1,8 @@
 body{       /*전체 배경색*/
     background-color: #FAF4B7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @font-face {
@@ -16,33 +19,38 @@ body{       /*전체 배경색*/
   }
 
 .main_title{         /*게시판*/
-    position:absolute;
-    left: 100px;
-    top: 50px;
+   
+    margin-top: 95px;
     font-size: 40px;
     font-family: 'NeoDunggeunmoPro-Regular';
+    border: 1px solid #547AFF;
     
 }
 
 .square{           /* 흰색 네모 박스*/
-    position: absolute;
-    width: 1200px;
-    height: 600px;
-    left: 100px;
-    top: 150px;
-    background-color: #F9F9F9;
+   
+    width: 1654px;
+    height: 853px;
+   
+    background: #F9F9F9;
     border-radius: 30px;
+    border: 1px solid #547AFF;
 
 }
 
 .title{           /*제목 박스*/
+    box-sizing: border-box;
+    width: 1621px;
+    height: 89px;
+    border: 1px solid #547AFF;
     display: flex;
-    margin-top: 15px;
-    align-items:center;
+    justify-content: center;
+    align-items: center;
 }
 
 .name{           /*제목*/
-    margin-left: 40px;
+    width: 80px;
+    margin-left: 79px;
     font-family: 'NeoDunggeunmoPro-Regular';
     font-style: normal;
     font-weight: 700;
@@ -54,73 +62,91 @@ body{       /*전체 배경색*/
 
 .title_box{     /*제목 적는 칸*/
     margin-left: 455px;
-    width: 550px;
-    height: 25px;
-    align-items:center;
+    width: 1414px;
+    height: 46px;
+   
 }
 
 .title_hr{     /*제목 박스 밑줄*/
     margin-top: 20px;
-    width: 1000px;
+    width: 1534px;
     height: 0px;
     border: 1px solid #000000;
 }
 
 .ck.ck-editor__editable:not(.ck-editor__nested-editable) {    /*글쓰기 에디터*/
     
-    min-height: 340px;
-    margin-bottom: 30px;
+    width: 1417px;
+    height: 340px;
+    
+    border: 1px solid #547AFF;
 }
 
 /* 툴박스 */
-.ck.ck-toolbar.ck-toolbar_grouping {      /*글쓰기 에디터*/
-    width: 791px;
-    margin-left: 225px;
+.ck.ck-toolbar.ck-toolbar_grouping {     
+    width: 1438px;
+    border: 1px solid #547AFF;
+   
 }
 
 /* 입력내용이 짧고 행이 길어지면 자동으로 텍스트입력태그 가로넓이가 줄어들기 때문에 고정 */
 .ck-editor__editable_inline {       /*글쓰기 에디터*/
-    width: 770px;
+   
     height: 340px;
-    margin-left: 225px;
+    border: 1px solid #547AFF;
+   
 }
 
 .content{
-    display:flex;
-    align-items:center;
-    margin-left: 40px;
+   
+    width: 100px;
+    height: 30px;
+  
+   margin-left: 79px;
+    margin-right: 43px;
+  
+    
     font-family: 'NeoDunggeunmoPro-Regular';
     font-style: normal;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 24px;
     line-height: 24px;
 
     color: #000000;
+    border: 1px solid #547AFF;
 }
 
 .editor_limit_box{  
-
-    display: flex;   /*글쓰기 에디터 박스*/
-    margin-top: 30px;
-   
-    width: 1200px;
-    height: 400px;
-    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    width: 1621px;
+    height: 437px;
+    display: flex;
     
+    align-items: center;
+    border: 1px solid #547AFF;
 }
 
 .editor_hr{       /*글쓰기 에디터 밑줄*/
-    width: 1000px;
+    width: 1534px;
     height: 0px;
     border: 1px solid #000000;
+   
 }
 
 .btnbox{      /*버튼 박스*/
-   display: flex;
-   width: 1200px;
-   height: 50px;
-   margin-top: 20px;
-   justify-content: flex-end;
+    box-sizing: border-box;
+
+    width: 1621px;
+    height: 119px;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
+    border: 1px solid #547AFF;
  }
 
 
