--- a/front/src/dongseop/Write.css
+++ b/front/src/dongseop/Write.css
@@ -3,6 +3,9 @@ body{       /*전체 배경색*/
     display: flex;
     justify-content: center;
     align-items: center;
+
+    width: 100%;
+    height: 100%;
 }
 
 @font-face {
@@ -24,6 +27,8 @@ body{       /*전체 배경색*/
     font-size: 40px;
     font-family: 'NeoDunggeunmoPro-Regular';
     border: 1px solid #547AFF;
+
+    
     
 }
 
